@@ -1,6 +1,6 @@
 
-R version 2.6.1 Patched (2007-12-05 r43601)
-Copyright (C) 2007 The R Foundation for Statistical Computing
+R version 2.6.2 alpha (2008-01-25 r44154)
+Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -510,6 +510,11 @@ Ambiguous method selection for "diag", target "ddiMatrix" (the first of the sign
 > stopifnot(is(T, "dtTMatrix"), identical(T[,3], c(10,10,10,0,0)))
 > 
 > M <- m2; M[1,] <- 0 ; M ; assert.EQ.mat(M, diag(c(0,rep(1,4))), tol=0)
+Warning message:
+Ambiguous method selection for "isTriangular", target "dtTMatrix" (the first of the signatures shown will be used)
+    TsparseMatrix
+    triangularMatrix
+ 
 5 x 5 sparse Matrix of class "dtCMatrix"
               
 [1,] . . . . .
@@ -549,11 +554,11 @@ Ambiguous method selection for "diag", target "ddiMatrix" (the first of the sign
 > m[i] <- v # the role model: only first column is affected
 > M[i] <- v; assert.EQ.mat(M,m) # dge
 > D[i] <- v; assert.EQ.mat(D,m) # ddi -> dtT -> dgT
-'x[i] <- v' indexing: Coercing class dtTMatrix to dgTMatrix
+'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
 > s[i] <- v; assert.EQ.mat(s,m) # dtT -> dgT
-'x[i] <- v' indexing: Coercing class dtTMatrix to dgTMatrix
+'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
 > S[i] <- v; assert.EQ.mat(S,m); S # dtC -> dtT -> dgT -> dgC
-'x[i] <- v' indexing: Coercing class dtTMatrix to dgTMatrix
+'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
 6 x 6 sparse Matrix of class "dgCMatrix"
                  
 [1,] 15 . . . . .
@@ -751,6 +756,7 @@ Ambiguous method selection for "-", target "dgTMatrix#dgTMatrix" (the first of t
 [4,] . .  .   . .   .   .
 [5,] . 2  3.2 . 3.2 .   .
 > 
+> S <- as(Diagonal(5),"sparseMatrix")
 > H <- Hilbert(9)
 > Hc <- as(round(H, 3), "dsCMatrix")# a sparse matrix with no 0 ...
 > (trH <- tril(Hc[1:5, 1:5]))
@@ -761,7 +767,42 @@ Ambiguous method selection for "-", target "dgTMatrix#dgTMatrix" (the first of t
 [3,] 0.333 0.250 0.200 .     .    
 [4,] 0.250 0.200 0.167 0.143 .    
 [5,] 0.200 0.167 0.143 0.125 0.111
-> stopifnot(is(trH, "triangularMatrix"), trH@uplo == "L")
+> stopifnot(is(trH, "triangularMatrix"), trH@uplo == "L",
++           is(S, "triangularMatrix"))
+> 
+> ## triangular assignment
+> ## the slick (but inefficient in case of sparse!) way to assign sub-diagonals:
+> ## equivalent to tmp <- `diag<-`(S[,-1], -2:1); S[,-1] <- tmp
+> ## which dispatches to (x="TsparseMatrix", i="missing",j="index", value="replValue")
+> diag(S[,-1]) <- -2:1 # used to give a wrong warning
+> ## FIXME? the above *could* return triangular -- but for that
+> 
+> trH[c(1:2,4), c(2:3,5)] <- 0 # gave an *error* upto Jan.2008
+> trH[ lower.tri(trH) ] <- 0   # ditto, because of callNextMethod()
+.TM.repl.i.2col(): drop 'matrix' case ...
+'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
+> 
+> m <- Matrix(0+1:28, nrow = 4)
+> m[-3,c(2,4:5,7)] <- m[ 3, 1:4] <- m[1:3, 6] <- 0
+> mT <- as(m, "dgTMatrix")
+> stopifnot(identical(mT[lower.tri(mT)],
++                     m [lower.tri(m) ]))
+> lM <- upper.tri(mT, diag=TRUE)
+> mT[lM] <- 0
+.TM.repl.i.2col(): drop 'matrix' case ...
+>  m[lM] <- 0
+> assert.EQ.mat(mT, as(m,"matrix"))
+> mT[lM] <- -1:0
+.TM.repl.i.2col(): drop 'matrix' case ...
+>  m[lM] <- -1:0
+> assert.EQ.mat(mT, as(m,"matrix"))
+> (mT <- drop0(mT))
+4 x 7 sparse Matrix of class "dgCMatrix"
+                         
+[1,] -1  .  . -1 -1 -1 -1
+[2,]  2 -1 -1  .  .  .  .
+[3,]  .  .  . -1 -1 -1 -1
+[4,]  4  . 12  .  .  .  .
 > 
 > i <- c(1:2, 4, 6:7); j <- c(2:4,6)
 > H[i,j] <- 0
@@ -918,5 +959,5 @@ Ambiguous method selection for "!=", target "numeric#dgCMatrix" (the first of th
 + 	  )
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  14.204 0.12 14.381 0 0 
+Time elapsed:  16.521 0.148 31.065 0 0 
 > 
